--- a/eas-frontend/public/index.html
+++ b/eas-frontend/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>React App</title>
   </head>
   <body style="background-color: #f7f7f7">
